bonus_k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: travelo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend
        image: taky77/travelo-backend:2.0

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"

          limits:
            cpu: "1"
            memory: "1Gi"

        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60    
          periodSeconds: 5
          failureThreshold: 12       

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 150
          periodSeconds: 10
          failureThreshold: 3

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 150
          periodSeconds: 5
          failureThreshold: 3
